# HairFastGAN

./: .gitignore  README.md  hair_swap.py  index.html  main.py  pyproject.toml  requirements.txt
css/: back-button.css  menu.css  styles.css
datasets/: image_dataset.py
js/: back-button.js  copy.js  main.js  menu.js  zoom.js
losses/: pp_losses.py
models/: Alignment.py  Blending.py  Embedding.py  Encoders.py  Net.py
models/CtrlHair/: README.md  global_value_utils.py  hair_editor.py
models/CtrlHair/color_texture_branch/: config.py  dataset.py  train.py
models/CtrlHair/external_code/: landmarks_util.py
models/CtrlHair/shape_branch/: config.py  model.py  shape_util.py  solver.py  train.py  validation_in_train.py
models/CtrlHair/ui/: backend.py
models/CtrlHair/util/: mask_color_util.py
models/FeatureStyleEncoder/: FSencoder.py  README.md  download_models.sh  test.py  train.py  trainer.py  video_processing.py
models/STAR/: README.md  evaluate.py  main.py  requirements.txt  tester.py  trainer.py
models/STAR/conf/: alignment.py  base.py
models/STAR/lib/: __init__.py  utility.py
models/STAR/tools/: analysis_motivation.py  infinite_loop_gpu.py  split_wflw.py  testtime_pca.py
models/encoder4editing/configs/: paths_config.py
models/encoder4editing/datasets/: images_dataset.py  (+1 more)
models/face_parsing/: face_dataset.py
scripts/: align_face.py  blending_gen.py  blending_train.py  fid_metric.py  pp_gen.py  pp_train.py  rotate_gen.py  rotate_train.py
utils/: drive.py  image_utils.py  save_utils.py  seed.py  shape_predictor.py  time.py  train.py
(+48 files in other folders)
